--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
 # SENTRY 
 
-SENTRY_AUTH_TOKEN=xxxxxxxxxxxxxxxxxxx
+SENTRY_AUTH_TOKEN=xxxxxxxxxxxxxxxxxx
+
+# CLERK
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=xxxxx
+CLERK_SECRET_KEY=xxxxxx
+
+# POSTHOG
+
+NEXT_PUBLIC_POSTHOG_KEY=xxxxxxxx
+NEXT_PUBLIC_POSTHOG_HOST=xxxxxxxxxx
