--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.7.5",
     "@sentry/nextjs": "8",
     "@t3-oss/env-nextjs": "^0.10.1",
     "geist": "^1.3.0",
     "next": "^14.2.4",
+    "posthog-js": "^1.174.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zod": "^3.23.3"
