--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^5.7.5",
     "@sentry/nextjs": "8",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@vercel/speed-insights": "^1.0.12",
     "geist": "^1.3.0",
     "next": "^14.2.4",
     "posthog-js": "^1.174.2",
