--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-  "name": "cloudinary-hackaton",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "lint:errors": "biome lint --error-on-warnings ./src",
-    "lint:fix": "biome lint ./src",
-    "lint:write": "biome lint --write ./src",
-    "format": "biome format ./src",
-    "format:write": "biome format --write ./src",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@clerk/nextjs": "^5.7.5",
-    "@sentry/nextjs": "8",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "@vercel/speed-insights": "^1.0.12",
-    "geist": "^1.3.0",
-    "next": "^14.2.4",
-    "posthog-js": "^1.174.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "zod": "^3.23.3"
-  },
-  "devDependencies": {
-    "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.10",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.4",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.5.3"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.37.0"
-  }
+	"name": "cloudinary-hackaton",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "next build",
+		"dev": "next dev",
+		"lint:errors": "biome lint --error-on-warnings ./src",
+		"lint": "biome lint ./src",
+		"lint:write": "biome lint --write ./src",
+		"format": "biome format ./src",
+		"format:write": "biome format --write ./src",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@clerk/nextjs": "^5.7.5",
+		"@sentry/nextjs": "8",
+		"@t3-oss/env-nextjs": "^0.10.1",
+		"@vercel/speed-insights": "^1.0.12",
+		"geist": "^1.3.0",
+		"next": "^14.2.4",
+		"posthog-js": "^1.174.2",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"zod": "^3.23.3"
+	},
+	"devDependencies": {
+		"@types/eslint": "^8.56.10",
+		"@types/node": "^20.14.10",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"@typescript-eslint/eslint-plugin": "^8.1.0",
+		"@typescript-eslint/parser": "^8.1.0",
+		"eslint": "^8.57.0",
+		"eslint-config-next": "^14.2.4",
+		"postcss": "^8.4.39",
+		"prettier": "^3.3.2",
+		"prettier-plugin-tailwindcss": "^0.6.5",
+		"tailwindcss": "^3.4.3",
+		"typescript": "^5.5.3"
+	},
+	"ct3aMetadata": {
+		"initVersion": "7.37.0"
+	}
 }
