--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,8 +20,8 @@ jobs:
     - name: Install dependencies
       run: bun install --no-progress
     - name: Run tests
-      run: bun run test --no-progress
+      run: bun run test
     - name: Run linter
-      run: bun run lint --no-progress
+      run: bun run lint 
     - name: Run build
-      run: bun run build --no-progress
+      run: bun run build
