--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,10 +17,9 @@ jobs:
         echo CLERK_SECRET_KEY=${{secrets.CLERK_SECRET_KEY}} >> .env
         echo NEXT_PUBLIC_POSTHOG_KEY=${{secrets.NEXT_PUBLIC_POSTHOG_KEY}} >> .env
         NEXT_PUBLIC_POSTHOG_HOST=${{secrets.NEXT_PUBLIC_POSTHOG_HOST}} >> .env
+        NEXT_PUBLIC_APP_BASE_URL=${{secrets.NEXT_PUBLIC_APP_BASE_URL}} >> .env
     - name: Install dependencies
       run: bun install --no-progress
-    - name: Run tests
-      run: bun run test
     - name: Run linter
       run: bun run lint 
     - name: Run build
