--- a/package.json
+++ b/package.json
@@ -16,15 +16,104 @@
 	"dependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@clerk/nextjs": "^5.7.5",
+		"@hookform/resolvers": "^3.9.0",
+		"@nextui-org/accordion": "^2.0.40",
+		"@nextui-org/autocomplete": "^2.1.7",
+		"@nextui-org/avatar": "^2.0.33",
+		"@nextui-org/badge": "^2.0.32",
+		"@nextui-org/breadcrumbs": "^2.0.13",
+		"@nextui-org/button": "^2.0.38",
+		"@nextui-org/calendar": "^2.0.12",
+		"@nextui-org/card": "^2.0.34",
+		"@nextui-org/checkbox": "^2.1.5",
+		"@nextui-org/chip": "^2.0.33",
+		"@nextui-org/code": "^2.0.33",
+		"@nextui-org/date-input": "^2.1.4",
+		"@nextui-org/date-picker": "^2.1.8",
+		"@nextui-org/divider": "^2.0.32",
+		"@nextui-org/dropdown": "^2.1.31",
+		"@nextui-org/image": "^2.0.32",
+		"@nextui-org/input": "^2.2.5",
+		"@nextui-org/kbd": "^2.0.34",
+		"@nextui-org/link": "^2.0.35",
+		"@nextui-org/listbox": "^2.1.27",
+		"@nextui-org/menu": "^2.0.30",
+		"@nextui-org/modal": "^2.0.41",
+		"@nextui-org/navbar": "^2.0.37",
+		"@nextui-org/pagination": "^2.0.36",
+		"@nextui-org/popover": "^2.1.29",
+		"@nextui-org/progress": "^2.0.34",
+		"@nextui-org/radio": "^2.1.5",
+		"@nextui-org/react": "^2.4.8",
+		"@nextui-org/ripple": "^2.0.33",
+		"@nextui-org/scroll-shadow": "^2.1.20",
+		"@nextui-org/select": "^2.2.7",
+		"@nextui-org/skeleton": "^2.0.32",
+		"@nextui-org/slider": "^2.2.17",
+		"@nextui-org/snippet": "^2.0.43",
+		"@nextui-org/spacer": "^2.0.33",
+		"@nextui-org/spinner": "^2.0.34",
+		"@nextui-org/switch": "^2.0.34",
+		"@nextui-org/system": "^2.2.6",
+		"@nextui-org/table": "^2.0.40",
+		"@nextui-org/tabs": "^2.0.37",
+		"@nextui-org/theme": "^2.2.11",
+		"@nextui-org/tooltip": "^2.0.41",
+		"@nextui-org/user": "^2.0.34",
+		"@radix-ui/react-accordion": "^1.2.1",
+		"@radix-ui/react-alert-dialog": "^1.1.2",
+		"@radix-ui/react-aspect-ratio": "^1.1.0",
+		"@radix-ui/react-avatar": "^1.1.1",
+		"@radix-ui/react-checkbox": "^1.1.2",
+		"@radix-ui/react-collapsible": "^1.1.1",
+		"@radix-ui/react-context-menu": "^2.2.2",
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-dropdown-menu": "^2.1.2",
+		"@radix-ui/react-hover-card": "^1.1.2",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-menubar": "^1.1.2",
+		"@radix-ui/react-navigation-menu": "^1.2.1",
+		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-progress": "^1.1.0",
+		"@radix-ui/react-radio-group": "^1.2.1",
+		"@radix-ui/react-scroll-area": "^1.2.0",
+		"@radix-ui/react-select": "^2.1.2",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slider": "^1.2.1",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-switch": "^1.1.1",
+		"@radix-ui/react-tabs": "^1.1.1",
+		"@radix-ui/react-toast": "^1.2.2",
+		"@radix-ui/react-toggle": "^1.1.0",
+		"@radix-ui/react-toggle-group": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.3",
 		"@sentry/nextjs": "8",
 		"@t3-oss/env-nextjs": "^0.10.1",
 		"@vercel/speed-insights": "^1.0.12",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"cmdk": "1.0.0",
+		"date-fns": "^4.1.0",
+		"embla-carousel-react": "^8.3.0",
+		"framer-motion": "^11.11.9",
 		"geist": "^1.3.0",
+		"input-otp": "^1.2.4",
+		"lucide-react": "^0.453.0",
 		"next": "^14.2.4",
+		"next-themes": "^0.3.0",
 		"posthog-js": "^1.174.2",
 		"react": "^18.3.1",
+		"react-day-picker": "8.10.1",
 		"react-dom": "^18.3.1",
-		"zod": "^3.23.3"
+		"react-hook-form": "^7.53.0",
+		"react-resizable-panels": "^2.1.4",
+		"recharts": "^2.13.0",
+		"sonner": "^1.5.0",
+		"tailwind-merge": "^2.5.4",
+		"tailwindcss-animate": "^1.0.7",
+		"vaul": "^1.1.0",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@types/eslint": "^8.56.10",
